# gm-kit

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BACKLOG.md  CLAUDE.md  EPIC-Scenario-ClueGraph.md  LICENSE  README.md  justfile  pyproject.toml  resume.sh  setup_dev.sh  setup_python_dev.sh  startcode.config.json  startcode.sh
.codex/: auth.json  config.toml  history.jsonl  prompts  version.json
.github/workflows/: ci.yml  end-to-end-harness.yml
.specify/memory/: constitution.md
.specify/scripts/bash/: check-prerequisites.sh
devtools/scripts/: README.md  agents.registry.sh  live_handoff_harness.py  live_handoff_harness.sh  pdf_convert_agent_handoff_loop.sh  provision_agents.sh  pymupdf_callout_finder.py  remove_agents.sh  run_step7_7_agent.py  run_step7_7_agent.sh
docs/team/: Gm-Kit Development Journal.md  README.md  developer-tools.md  mcp_knowledge_graph_guidelines.md  speckit_guidelines.md  speckit_prompts_for_gmkit.md
docs/team/spec-kit-analysis/: Spec-Kit-Analysis.md
docs/user/: user_guide.md
planning/: Gm-Kit Development Journal.md  TODOS.md  project-overview.md  prompts.md
scripts/: agents.registry.sh  provision_agents.sh  remove_agents.sh
specs/001-ci-walking-skeleton/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ci-walking-skeleton/checklists/: ci-requirements.md  requirements.md
specs/001-ci-walking-skeleton/contracts/: README.md
specs/001-readme-audit/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-readme-audit/checklists/: requirements.md
specs/001-readme-audit/contracts/: manual-audit.md  readme-structure.md
specs/002-installer-skeleton/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-installer-skeleton-archive/: plan.md  spec.md
specs/002-installer-skeleton-archive/checklists/: installation.md
specs/002-installer-skeleton/checklists/: installer.md  requirements.md
specs/002-installer-skeleton/contracts/: cli-init-contract.md
specs/004-pdf-research/: pdf-conversion-architecture.md
specs/004-pdf-research/findings/: README.md  call-of-cthulhu-codex-report.md  call-of-cthulhu.md  chunking-guidance.md  findings-template.md  keep-on-the-borderlands.md  review-checklist.md
specs/004-pdf-research/poc-scripts/: convert_no_images_to_markdown.py  convert_pipeline_steps.py  font-family-mapping.json  font_family_sampler.py  remove_images_delete.py  toc-extracted.txt
specs/005-pdf-convert-orchestration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-pdf-convert-orchestration/checklists/: qa-release-gate.md  requirements.md
specs/005-pdf-convert-orchestration/contracts/: metadata-schema.json  phase-interface.md  state-schema.json
specs/006-code-pdf-pipeline/: data-model.md  feature-implementation-journal.txt  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-code-pdf-pipeline/checklists/: requirements-quality.md  requirements.md
specs/006-code-pdf-pipeline/contracts/: cli.md
specs/007-agent-pipeline/: data-model.md  feature-implementation-journal.txt  feature_journal.md  implementation-fix-checklist.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  typecheck-triage.md
specs/007-agent-pipeline/checklists/: plan.md  requirements.md
specs/007-agent-pipeline/contracts/: agent-steps.md
specs/009-agent-audit/: .gitignore  feature-implementation-journal.txt  findings.md  test-runner.md
src/gm_kit/: __init__.py  agent_config.py  agent_registry.py  cli.py  init.py  script_generator.py  template_manager.py  validator.py
tests/: README.md  test_example.py
tests/contract/: test_cli_init_contract.py
tests/integration/: test_agent_validation.py  test_full_init_flow.py  test_script_parity.py  test_toml_validation.py
tests/unit/: test_agent_config.py  test_cli.py  test_init.py  test_live_handoff_harness.py  test_script_generator.py  test_template_manager.py  test_validator.py
vscode-profiles/: python.code-profile
(+175 files in other folders)
