[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gm-kit"
version = "0.1.0"
description = "Starter package for the GM Kit workspace."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "James Todd Garza" }]
dependencies = [
    "readchar",
    "typer",
    "rich",
    "PyMuPDF>=1.23.0",
    "tomli; python_version < \"3.11\"",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "black", "isort", "mypy", "pytest-cov", "readchar", "typer", "bandit"]
test = [
    "pytest",
    "pytest-cov",
    "pexpect; sys_platform != 'win32'",
    "wexpect; sys_platform == 'win32'",
]

[project.scripts]
gmkit = "gm_kit.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src/gm_kit"]
include = ["src/gm_kit/assets/**"]

[tool.hatch.build.targets.sdist]
include = ["src/gm_kit/assets/**"]
